<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jessl.mymapsapplication.ListActivityOne">

    <Button
        android:id="@+id/MapButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onMapButtonClick"
        android:text="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                app:cardBackgroundColor="@color/cardview_initial_background"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:id="@+id/relAll"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:id="@+id/card1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/name1"
                            android:layout_alignParentTop="true"
                            android:text="@string/name_1"
                            android:textSize="30sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/loc1"
                            android:text="@string/loc_1"
                            android:layout_below="@+id/name1"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/date1"
                            android:text="@string/date_1"
                            android:layout_below="@+id/name1"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@+id/loc1"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/des"
                            android:text="@string/des_1"
                            android:layout_below="@+id/loc1"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/card2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:layout_below="@+id/card1"
                        android:layout_marginTop="16dp"
                        android:background="@color/cardview_light_background">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/name2"
                            android:layout_alignParentTop="true"
                            android:text="@string/name_2"
                            android:textSize="30sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/loc2"
                            android:text="@string/loc_2"
                            android:layout_below="@+id/name2"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/date2"
                            android:text="@string/date_2"
                            android:layout_below="@+id/name2"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@+id/loc2"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/des2"
                            android:text="@string/des_2"
                            android:layout_below="@+id/loc2"
                            />

                    </RelativeLayout>
                </RelativeLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
